# git-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/git_mcp/: __init__.py  __main__.py  server.py
src/git_mcp/tools/: __init__.py  commit_history_template.py  git_tools.py  github_tools.py
tests/: test_git_tools.py  test_github_tools.py
