[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-agent"
version = "0.1.0"
dependencies = [
    "fastmcp",
    "gitpython",
    "PyGithub",
]

[project.scripts]
git-agent = "git_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]